@@ -10,6 +10,9 @@ Change log for zeit.web
 
 - ZON-2233: Fix FF < 27 Navigation
 
+- ZON-2586: Move instantarticle feed from special URL (and hard-coded solr
+  query) to view name `/rss-instantarticle` on any centerpage
+
 - FIX: make getMobileView available under old namespace (for Meetrics)
 
 - FIX: Handle proxied solr results in author feeds properly
